--- a/wp-content/themes/zocdoc-careers/src/styl/viewport/default/_variables.styl
+++ b/wp-content/themes/zocdoc-careers/src/styl/viewport/default/_variables.styl
@@ -106,6 +106,11 @@ fontsize-15-strong()
   font-size 1.5rem
   line-height 2.1rem
   font-family sharp-sans-bold
+  
+fontsize-15()
+  font-size 1.5rem
+  line-height 2.1rem
+  font-family kievit-slab-book
 
 fontsize-14()
   font-size 1.4rem
